# devportal

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  apps.json  compose.yml  dbs.json  main.py  psql  pyproject.toml  vms.json
alembic/versions/: 63133f827f17_init_application_table.py
data/: apps.json  dbs.json  vms.json
devportal/apps/: main.py
devportal/core/: plugin_loader.py
devportal/core/ui/: __init__.py
devportal/core/ui/pages/: home.py  view_app.py
devportal/dbs/: main.py
devportal/plugins/: __init__.py
devportal/plugins/vsphere/: __init__.py
devportal/ui/components/: dbs.py  vms.py
devportal/ui/pages/: home.py  view_app.py
devportal/vms/: main.py
migrations/: env.py
migrations/versions/: 0625134aa7e3_add_application_type.py  63133f827f17_init_application_table.py  dda85011ffd6_init_application_and_component_tables.py  e3f2d2159f1e_add_frontend_component_type.py  f49eb0d3e125_add_component_tech_stack.py  fb9dbf250784_add_application_domain.py
src/appatlas/core/: __init__.py  plugin_loader.py
src/appatlas/core/api/: __init__.py  apps.py
src/appatlas/core/models/: __init__.py  app.py
src/appatlas/dbs/: main.py
src/appatlas/plugins/: __init__.py
src/appatlas/vms/: main.py
src/devportal/apps/: main.py
src/devportal/core/: __init__.py  app.py  model.py  plugin_loader.py
src/devportal/dbs/: main.py
src/devportal/plugins/: __init__.py
src/devportal/vms/: main.py
src/i18n/: apps.en.yml  apps.fr.yml  components.en.yml  components.fr.yml  global.en.yml  global.fr.yml
src/templates/content/: applications.html  component.html  components.html  single_application.html
src/templates/pages/: applications.html  base.html  component.html  components.html  single_application.html
src/templates/partial/: errors.html  navbar.html
tests/core/: test_plugins.py
tests/devportal/core/: test_plugins.py
(+35 files in other folders)
