[tool.poetry]
name = "devportal"
version = "0.1.0"
description = "An extensible Developer Portal."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.4.21"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
