[tool.poetry]
name = "devportal"
version = "0.1.0"
description = "An extensible Developer Portal."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "devportal", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.2"}
python-i18n = "^0.3.9"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pytest = "^8.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "tests",
    "integration",
]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
